syntax = "proto3";
package dvras;

option go_package = ".;pb";

message StartedEvent {
    string annotation = 3;
}

message StoppedEvent {
    string annotation =3;
}

message DatapointAcquiredEvent {
    repeated sint32 ch1 = 1;
    repeated sint32 ch2 = 2;
    repeated sint32 pps = 3;
}